third_party/move/move-compiler/tests/move_check/inlining/resources_invalid.exp
error[E14002]: Inlined code invalid in this context
  ┌─ tests/move_check/inlining/resources_invalid.move:8:26
  │
8 │         borrow_global<T>(ref.addr)
  │                          ^^^ After inlining: invalid storage operation on external type `0x42::objects::ReaderRef`

